changed background of the sections video and experience

--- a/src/css/components/main/_section.scss
+++ b/src/css/components/main/_section.scss
@@ -4,7 +4,7 @@
 .section {
   padding-top: 112px;
   padding-bottom: 92px;
-  background-color: $color-light;
+  background-color: $color-gray-light;
 
   &__title {
     font-weight: 500;
