--- a/src/css/style.css
+++ b/src/css/style.css
@@ -352,7 +352,7 @@ a {
   width: min(100% - 40px, 1110px);
   margin-inline: auto;
 }
-.container--sm {
+.container-sm {
   width: min(100% - 40px, 540px);
 }
 
