--- a/src/css/components/header/_navbar.scss
+++ b/src/css/components/header/_navbar.scss
@@ -4,16 +4,19 @@
 .navbar {
     margin-bottom: 134px;
     &__list {
-        display: flex;
-        flex-wrap: wrap;
-        -moz-column-gap: 23px;
-             column-gap: 23px;
-        margin-left: -10px;
-
-        @include md {
+        @include xs-min {
+            display: flex !important; 
+            flex-wrap: wrap;
+                -moz-column-gap: 23px;
+            column-gap: 23px;
+            margin-left: -10px;
+        }
+        
+        @include xs {
             display: none;
             margin-top: 30px;
         }
+
     }
     &__link {
         color: $color-black;
@@ -42,7 +45,7 @@
         transition: all .5s ease-in-out;
         cursor: pointer;
 
-        @include md-min {
+        @include xs-min {
             display: none;
         }
 
@@ -74,7 +77,7 @@
             left: 0;
             transform: rotate(0deg);
             transition: .25s ease-in-out;
-            
+
             &:nth-child(1) {
                 top: 0;
             }
@@ -85,7 +88,6 @@
                 top: 18px;
             }
         }
-
 
     }
 
