--- a/src/css/style.css
+++ b/src/css/style.css
@@ -366,14 +366,16 @@ a {
 .navbar {
   margin-bottom: 134px;
 }
-.navbar__list {
-  display: flex;
-  flex-wrap: wrap;
-  -moz-column-gap: 23px;
-  column-gap: 23px;
-  margin-left: -10px;
+@media (min-width: 480px) {
+  .navbar__list {
+    display: flex !important;
+    flex-wrap: wrap;
+    -moz-column-gap: 23px;
+    column-gap: 23px;
+    margin-left: -10px;
+  }
 }
-@media (max-width: 767.8px) {
+@media (max-width: 479.8px) {
   .navbar__list {
     display: none;
     margin-top: 30px;
@@ -402,7 +404,7 @@ a {
   transition: all 0.5s ease-in-out;
   cursor: pointer;
 }
-@media (min-width: 768px) {
+@media (min-width: 480px) {
   .navbar__btn {
     display: none;
   }
